# Evalify

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/: CMakeLists.txt  evalify.desktop
src/: build.sh  evalify.vala
